Fix rotating-bg-Image on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -378,8 +378,8 @@ h2 {
         background-image: url('../img/why-bg-image1.svg');
         background-repeat: no-repeat;
         background-position: center;
-        background-size: contain;
-        /* background-size: 300px 450px; */
+        /* background-size: cover; */
+        background-size: 100% 100%;
     }
 
     .why .message {
